--- a/flask_app/app/templates/index.html
+++ b/flask_app/app/templates/index.html
@@ -1,4 +1,4 @@
-<!--user signup and login-->
+<!--user login-->
 {% extends 'base.html' %}
 {% block title %}-home{% endblock %}
 {% block content %}
